<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create_trip"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/nav_create_trip" />

        <item
            android:id="@+id/nav_view_trips"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/nav_view_trips" />
    </group>

    <item android:title="@string/nav_data_management">
        <menu>
            <item
                android:id="@+id/nav_backup"
                android:icon="@android:drawable/ic_menu_save"
                android:title="@string/nav_backup_db" />

            <item
                android:id="@+id/nav_restore"
                android:icon="@android:drawable/ic_menu_revert"
                android:title="@string/nav_restore_db" />
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/nav_about" />

        <item
            android:id="@+id/nav_close"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="@string/nav_close" />
    </group>

</menu>