<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:src="@drawable/app_logo"
        android:layout_marginTop="40dp"
        android:contentDescription="@null" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="#85022E"
        android:text="@string/app_full_name"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:layout_marginBottom="20dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:fontFamily="monospace"
        android:justificationMode="inter_word"
        android:textStyle="bold"
        android:textAlignment="viewStart"
        android:lineSpacingExtra="4dp"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/app_description"
        android:layout_marginBottom="40dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/footer_text"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:textColor="#85022E"
        android:textSize="16sp" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageButton
        android:id="@+id/btn_about_home"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:padding="6dp"
        android:scaleType="fitCenter"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_home"
        android:contentDescription="@string/desc_go_back"
        app:tint="#85022E" />

</LinearLayout>