<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://tools.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#FFFFFF"
    tools:context=".ViewTripActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/txt_categories_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_trip_categories"
        android:textColor="#0D1A39"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginBottom="48dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_ongoing_trips"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:text="@string/btn_ongoing_trips"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:backgroundTint="#E27A2A"
        app:cornerRadius="8dp"
        android:layout_marginBottom="16dp"
        tools:ignore="AccessibilityContrastCheck" />

    <Button
        android:id="@+id/btn_upcoming_trips"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:text="@string/btn_upcoming_trips"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:backgroundTint="#249CBF"
        app:cornerRadius="8dp"
        android:layout_marginBottom="16dp"
        tools:ignore="AccessibilityContrastCheck" />

    <Button
        android:id="@+id/btn_ended_trips"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:text="@string/btn_ended_trips"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:backgroundTint="#5E6A75"
        app:cornerRadius="8dp"
        android:layout_marginBottom="16dp"
        tools:ignore="AccessibilityContrastCheck" />

    <Button
        android:id="@+id/btn_all_trips"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:text="@string/btn_all_trips"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:backgroundTint="#0D1A39"
        app:cornerRadius="8dp"
        tools:ignore="AccessibilityContrastCheck" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2" />

</LinearLayout>